Mon Aug 30 13:41:49 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: ExpandMatrix,SetMatrixSize,ColumnsOf,RowsOf,
	  IsMatrix* accept null as the input (0x0) matrix and act accordingly

	* src/geniustests.txt: Add tests

Mon Aug 30 13:28:23 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add "legend" style parameter to LinePlotDrawLine

	* lib/equation_solving/diffeqs.gel: Add RungeKuttaFull and
	  EulersMethodFull which return all points computed (and slightly
	  optimize Runge-Kutta)
	
	* src/geniustests.txt, help/C/*.xml: update

Mon Aug 30 10:23:49 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Patch from Vincent Untz to fix access to sealed
	  vte structure members

Tue Jun 29 11:38:38 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: Add SurfacePlotVariableNames and some fixes

	* help/C/*.xml: document above and some fixes

Tue Jun 29 11:11:04 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: allow changing variable names for surfaces when
	  plotting from a dialog

Sat Feb 27 16:57:50 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: check events every time we get something from
	  readline.  That way, the new line from "return" is truly
	  synchroneous.  (it was in the wrong place for commands, even though
	  for expression this already got fixed)

Wed Feb 03 00:10:42 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: when drawing slopefield solutions, allow the graph
	  to leave window by a small fudge factor of 1/100 of the window size

	* gtkextra/gtkplot.c, gtkextra/gtkplot3d.c: add some sanity fixes to
	  fix crashes on tick calculations when the supplied data is less
	  than sane.  The tick calculation stuff is very evil and there are
	  still some crashes around when doing insensible things with 
	  graphs.

Tue Feb 02 21:42:42 2010  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: fix compilation when gtksourceview is disabled
